melhorando a pagina principal

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,16 @@
 header{
     background: #CCCCCC;
 }
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 .arrumaCabeçalho{
     margin: 0 auto;
     
+}
+.principal{
+    width: 940px;
+    margin: 0 auto;
 }
 nav{
     position: absolute;
@@ -52,12 +59,7 @@ nav a:hover{
     border-color: green;
 }
 .produtos li:hover h2{
-    font-size: 34px;
-}
-.produtos{
-    width: 1110px;
-    margin: 0 auto;
-    padding: 50px 0px;
+    font-size: 32px;
 }
 .produtos h2{
     font-size: 30px;
@@ -80,10 +82,6 @@ footer{
     color: white;
     font-size: 13px;
     margin-top: 20px;
-}
-.main{
-    width: 1340px;
-    margin: 0 auto;
 }
 .formulario{
     margin: 40px 0;
@@ -145,4 +143,79 @@ thead {
 td, th {
     border: 1px solid #000000;
     padding: 8px 15px;
+}
+
+/*Página inicial*/
+.banner{
+    width: 100%;
+}
+/*em = tamanho base( indepente do tamanho da fonte base)*/
+/*em=proporcional*/
+.h2-index{
+    clear: left;
+    text-align: center;
+    font-size: 2em;
+    margin-bottom: 1em;
+}
+.main{
+    padding: 3em 0;
+    background: #fefefe;
+    width: 940px;
+    margin: 0 auto;
+}
+.main p{
+    margin: 0 0 1em;
+}
+.main b{
+    font-weight: bold;
+}
+.main i{
+    font-style: italic;
+}
+.imagem-beneficios{
+    width: 60%;
+}
+.utensilios{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#fefefe,#888);
+}
+.mapa p{
+    margin: 2em 0;
+    text-align: center;
+}
+.mapa-em-si{
+    width: 940px;
+    margin: 0 auto;
+}
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto;
+}
+.beneficios{
+    padding: 3em 0;
+    background: #888;
+}
+.itens{ 
+ line-height: 1.5em;
+}
+.itens:nth-child(1){
+    font-weight: bold;
+}
+.itens:before{
+content: "✯";
+}
+.lista-itens{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+    
+}
+.video{
+    width: 560px;
+    margin: 2em auto;
 }
