--- a/CSS/style.css
+++ b/CSS/style.css
@@ -219,3 +219,17 @@ content: "✯";
     width: 560px;
     margin: 2em auto;
 }
+.divisao-links{
+    display: inline-block;
+}
+.lista-links{
+    display: inline-block;
+}
+.github{
+    width: 50px;
+    height: 50px;
+}
+.linkedin{
+    width: 50px;
+    height: 50px;
+}
