--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,32 +4,36 @@ header{
 body{
     font-family: 'Montserrat', sans-serif;
 }
-.arrumaCabeçalho{
-    margin: 0 auto;
-    
+.caixa {
+	position: relative;
+	width: 1200px;
+	margin: 0 auto;
 }
+
 .principal{
-    width: 940px;
+    width: 1100px;
     margin: 0 auto;
 }
-nav{
-    position: absolute;
-    top: 8%;
-    display: inline-block;
-    right: 10%;
+nav {
+	position: absolute;
+	top: 110px;
+	right: 0;
 }
 nav a:hover{
     color: #c78c19;
     text-decoration: underline;
 }
-.links{
-    display: inline-block;
-    padding-left: 20px;
-    vertical-align: top;
-    padding-right: 20px;
-    font-size: 30px;
-    padding-top: 5%;
-    left: 40%;
+nav li {
+	display: inline;
+	margin: 0 0 0 15px;
+}
+nav a {
+    padding: 0 20px;
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 32px;
+	text-decoration: none;
 }
 .cabeçalho{
     text-decoration: none;
@@ -174,6 +178,7 @@ td, th {
 }
 .imagem-beneficios{
     width: 60%;
+    box-shadow: 10px 10px 5px black;
 }
 .utensilios{
     width: 120px;
@@ -191,6 +196,11 @@ td, th {
 .mapa-em-si{
     width: 940px;
     margin: 0 auto;
+    opacity: 0.5;
+    transition: 400ms all;
+}
+.mapa-em-si:hover{
+    opacity: 1;
 }
 .conteudo-beneficios{
     width: 640px;
@@ -232,4 +242,21 @@ content: "✯";
 .linkedin{
     width: 50px;
     height: 50px;
+}
+@media screen and (max-width: 490px) {
+    .caixa, .main, .conteudo-beneficios, .mapa-em-si, .video, .principal{
+        width: auto;
+    }
+    h1{
+        text-align: center;
+    }
+    nav{
+        position: static;
+    }
+    nav a{
+        font-size: 22px;
+    }
+    .lista-itens, .imagem-beneficios, .produtos li{
+        width: 100%;
+    }
 }
